<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_bullet3_qt_example</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tjdalsckd@gmail.com">robot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
	<depend>bullet3</depend>
	<depend>qt5</depend>
  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>sensor_msgs</depend>  
  <depend>std_msgs</depend>  
  <depend>geometry_msgs</depend>  
  <depend>nav_msgs</depend>  
  <depend>rmw_fastrtps_cpp</depend>  
  <depend>pluginlib</depend>
  <depend>hyu_robot_states</depend>
  <depend>builtin_interfaces</depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
